--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style=""></div>
+    <div id="root" style="width:1920px;height:1080px"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
